src/styles.scss
* {
    margin: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
    cursor: default;
}

body{
    overflow-x: hidden;
}


@mixin flex-box($fd: row, $ai: center, $jc: center, $g: 0px){
    display: flex;
    flex-direction: $fd;
    align-items: $ai;
    justify-content: $jc;
    gap: $g;
}

@mixin font($family: 'Josefin_Sans_Medium', $size: 26px, $color: $primary-dark-color){
    font-family: $family;
    font-size: $size;
    color: $color;
    line-height: 120%;
}

$primary-dark-color: #042639;
$primary-color: #F28A62;
$primary-color-opacity: rgba(242, 138, 98, 0.07);

$primary-dark-grey: #262E34;
$secondary-color-opacity: rgba(248, 245, 236, 0.12);
$secondary-color: #F8F5EC;  
$inactive: #262E341F;
$error: #E44C36;
$done: #97E163;
$secondary-dark-color: #2D383F;

$content-limit: 1200px;
$section-limit: 880px;

h2 {
    font-family: 'Anta';
    font-size: 60px;
    font-weight: 400;
    color: $primary-color;
}

